--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,11 +7,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Ant Design Pro</title>
+    <title>Xiao Re Ya</title>
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <noscript>Sorry, we need js to run correctly!</noscript>
+    <noscript>思博疯狂喷梦龙</noscript>
     <div id="root"></div>
   </body>
 </html>
